--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 <body>
   <header>
-    <img src="images/"Math Fluency Club Logo.png">
+    <img src="images/Math_Fluency_Club_Logo.png">
     <h1>Math Fluency Club</h1>
     <p class="lead">Where kids build speed, accuracy, and confidence in math — starting with the basics.</p>
   </header>
