--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+
   <title>Math Fluency Club</title>
 
   <!-- Google Font fallback for TAN Headline -->
@@ -11,7 +13,7 @@
   <style>
     body {
       margin: 0;
-      font-family: 'Open Sans', sans-serif;
+      font-family: 'Playfair Display', serif;
       background-color: #cb6ce6;
       color: white;
     }
